# cpp_examples

./: .gitignore  README.md  al.cpp  test.cpp  tt.c  tt1.c
array/: array_init.cpp  map.cpp  map2.cpp  reverse_vector.cpp  search.cpp  std_array.cpp  std_array2.cpp  vector.cpp  vector_copy.cpp  vector_exception_test.cpp
boost/: README.md  signal_hello.cpp
boost/funcptr/: CMakeLists.txt  README.md  main.cpp  task1.cpp  task1.h
boost/thread/: main.cpp  task1.cpp  task1.h
boost/thread-canopen/: README.md  task1.cpp
c/: assign_float.c  playground.c
c/bit_handler/: field.c
c/compare/: memcmp.c
c/compiler_option/: option.c
c/convert/: convert.c
c/crc/: crc16.c  crc16modbus.c  crc16modbus.h
c/endian/: getbyte.c
c/funcptr/: main.cpp  simple.cpp
c/init/: init.c
c/protocol/: README.md
c/sizeof/: pointer_size.c  test_sizeof.c
c/state_machine/: hello_sm.c  sm.c  sm.md
c/union/: bits.c
c/unity/dumb_example/: DumbExample.c  TestDumbExample
c/unity/dumb_example_cmake/: CMakeLists.txt
c/unity/dumb_example_cmake/src/: CMakeLists.txt  DumbExample.c
c/unity/dumb_example_cmake/test/: CMakeLists.txt  TestDumbExample.c
c/unity/dumb_example_cmake/unity/: CMakeLists.txt
c/unity/unit1b/: CMakeLists.txt  README.md
c/unity/unit1b/src/: Fib.c
c/unity/unit1b/test/: CMakeLists.txt  TestFib.c
c/unity/unit1b_cmake/src/: Fib.c  Fib.h
c/unity/unit1b_cmake/test/: CMakeLists.txt  TestFib.c
c/unity/unit2/inc/: MK20DX256.h
c/unity/unit2/src/: GPIO.c  GPIO.h
c/unity/unit2/test/: TestGPIO.c
c/unsigned_int/: convert_diff_size.c  convert_double.c  convert_float.c  time.c
c_epoll/: epoll_example  epoll_example.c
c_epoll/epoll_fd/: Makefile  epoll_example  epoll_example.c
c_epoll/epoll_pointer/: CMakeLists.txt  epoll_example.c
c_n_cpp/ex1/: Makefile  cpp.cpp  cpp.h  main.c
const/: constexpr.cpp  constpost.cpp
convert/: float2int16.cpp  increase_interval.cpp
enum/: enum_arg.c  enum_arg.cpp  enum_operator.cpp  enum_string.cpp  enum_string2.cpp  enum_stringfy.cpp  enum_type.cpp
errorcheck/: checksum.c
etl/crc/: .gitignore  CMakeLists.txt  ninja-build.sh
etl/crc/cmake/: crcConfig.cmake.in
etl/crc/src/: CMakeLists.txt  README.md  crc.c  crc.cpp  crc.h  etl_wrapper.cpp  etl_wrapper.h  main.cpp
etl/crc/tests/: CMakeLists.txt  test_crc.cpp
etl/crc/toolchains/: arm.cmake  x86_64.cmake
freq_periodic/: interval.c
fsm/: CMakeLists.txt  fsm.cpp  fsm.h
fsm/src/: CMakeLists.txt  fsm.cpp  fsm.h
fsm/tests/: CMakeLists.txt
gpt/: buffer_print.cpp
hackerrank/: README.md  bigsum.cpp  boxit.cpp  catsmouse.cpp  class.cpp  class_inherit.cpp  class_polymorphism.cpp  class_virtual.cpp  comparethree.cpp  condstat.cpp  deque.cpp  diagdiff.cpp  except.cpp  inheritance_func.cpp  inheritance_intro.cpp  inheritance_multiLevel.cpp  inheritance_rectangle.cpp  lowerBound.cpp  maps.cpp  object.cpp  output  output.txt  printpretty.cpp  sets.cpp  strings.cpp  stringstream.cpp  variable_sized_array.cpp  vectorErase.cpp  vectorsort.cpp
interface/: basic.cpp
io/: cintest.cpp  format.cpp  test.h
iterator/: begin.cpp  loop.cpp
ledcontrol/: CMakeLists.txt  README.md  ledcontrol.c  ledcontrol.h  ledgui.c  ledgui.h  main.c
ledcontrol/question/: README.md  ledgui.c  ledgui2.c  sum.c  thread.c
leetcode/: debug.cpp  twosum.cpp
loop/: for.c
math/: matrix.cpp
orocos/connectionNaming/: CMakeLists.txt  Connect-1.xml  Connect-2.xml  Connect-3.xml  CreateComponent.cmake  Filter1.cpf  Filter2.cpf  FindOrocos-OCL.cmake  FindOrocos-RTT.cmake  HMI.cpp  HMI.hpp  OneAxisFilter.cpp  OneAxisFilter.hpp  Robot.cpp  Robot.hpp
parsing/: custom_gril.c
pointer/: pointer.c  pointer.cpp  reference.c  reference.cpp  rvalueref.cpp  struct_float_array.c  weakptr.cpp
printf/: snprintf.c
return/: ret.cpp  tuple.cpp
return/tuple/: CMakeLists.txt  tuple.cpp  tuple_helper.cpp  tuple_helper.h
ringbuf/: ringbuffer.c
ringbuf/lwrb/: test.c
ringbuf/yk/: ringbuffer.h
string/: add.cpp  assign.cpp  compare.cpp  compare2.cpp  convert.cpp  gpsnmea.cpp  ostring.cpp  stream.cpp  stream_number.cpp  stringstream.cpp  stringview.cpp  ubxCfg.cpp  ubxCfgMsgBuild.cpp
struct/: struct_pod.cpp
template/: autodel.cpp  autodel2.cpp  autodel4.cpp  template_inherit.h
testing/: avg.cpp  counter.c  parser_comma.cpp
time/: diff.cpp  gps_tod.c  logsuppress.cpp  time_init.cpp
time/timecheck/: time_check.cpp  time_check.h
tuple/: operator.cpp
type_convert/: hello.cpp
unittest/: CMakeLists.txt  README.md
unittest/mock/: mocks.h
unittest/mock/src/: command.h  interface.h
unittest/simple/: lwrbTest.cpp
unsigned_arithmetic/: unsinged.c
variadic/: va.cpp
